# fednow-oss

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
conformance/: Cargo.toml  README.md
conformance/src/: check.rs  lib.rs  main.rs  scenarios.rs  vectors.rs
conformance/tests/: conformance_tests.rs
conformance/vectors/: manifest.toml
conformance/vectors/camt029/: rjcr-without-reason.xml
conformance/vectors/camt056/: missing-cancellation-reason.xml  valid.xml
conformance/vectors/envelope/: msgdefidr-mismatch.xml  valid-incoming-pacs008.xml  wrapper-document-mismatch.xml
conformance/vectors/head001/: wrong-to-party.xml
conformance/vectors/pacs002/: participant-reject.xml  reject-without-reason.xml  service-advice-settled.xml  unknown-status.xml
conformance/vectors/pacs004/: missing-return-reason.xml  valid.xml
conformance/vectors/pacs008/: bad-aba-checksum.xml  missing-category-purpose.xml  non-fednow-msgid.xml  non-usd.xml
conformance/vectors/pacs028/: missing-original.xml
core/: Cargo.toml  README.md
core/examples/: build_pacs008.rs  validate.rs
core/schemas/: README.md
core/src/: builder.rs  camt029.rs  camt056.rs  envelope.rs  error.rs  head001.rs  lib.rs  pacs002.rs  pacs004.rs  pacs008.rs  pacs028.rs  validate.rs
core/tests/: camt_tests.rs  envelope_tests.rs  head001_tests.rs  pacs002_builder_tests.rs  pacs002_tests.rs  pacs004_tests.rs  pacs008_builder_tests.rs  pacs008_tests.rs  pacs028_builder_tests.rs  pacs028_tests.rs
core/tests/fixtures/: camt029_valid_rjcr.xml  envelope_outgoing_pacs002.xml  head001_valid.xml  head001_valid_signed.xml  pacs002_valid_acsc.xml  pacs002_valid_rjct.xml  pacs008_valid.xml  pacs028_valid.xml
docs/: requisitos.md
docs/design/: fednow-profiles.md  message-signing.md  mq-transport.md
docs/handbook/: 01-credit-transfer-flow.md  02-timeout-reconciliation.md  04-zero-to-ctp.md  05-returns.md  README.md
gateway/: Cargo.toml  Dockerfile  README.md
gateway/src/: http.rs  lib.rs  main.rs  payment.rs  reconciler.rs  service.rs  southbound.rs  sqlite.rs  store.rs
gateway/tests/: e2e_mq_tests.rs  e2e_sim_tests.rs  rest_api_tests.rs  sqlite_store_tests.rs  state_machine_tests.rs
sdk/java/: README.md  pom.xml
sdk/java/src/main/java/io/github/joaoabuenosi/fednow/: GatewayClient.java  GatewayException.java  Payment.java  SubmitPaymentRequest.java
sdk/java/src/test/java/io/github/joaoabuenosi/fednow/: GatewayClientTest.java  IntegrationTest.java
sdk/python/: README.md  pyproject.toml
sdk/python/fednow_client/: __init__.py  client.py
sdk/python/tests/: test_client.py  test_integration.py
simulator/: Cargo.toml  Dockerfile  README.md  fednow-sim.toml.example
simulator/src/: lib.rs  main.rs
simulator/tests/: http_tests.rs  mq_tests.rs
