[package]
name = "fednow-conformance"
description = "Conformance suite: vector corpus, message validation CLI and live CTP scenario runner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fednow-core = { path = "../core" }
thiserror = { workspace = true }
serde = { workspace = true }
toml = "1"
ureq = "3"

[dev-dependencies]
fednow-sim = { path = "../simulator" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
