[package]
name = "fednow-core"
description = "ISO 20022 parsing, validation and construction for FedNow send-side integrations"
readme = "README.md"
keywords = ["fednow", "iso20022", "payments", "banking", "fintech"]
categories = ["parser-implementations", "finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
