[package]
name = "fednow-gateway"
description = "FedNow send middleware: state machine, event sourcing, outbox, pacs.028 reconciler (planned)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fednow-core = { path = "../core" }
thiserror = { workspace = true }
ureq = "3"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { workspace = true }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
fednow-sim = { path = "../simulator" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
