[package]
name = "fednow-sim"
description = "Local FedNow simulator: accepts pacs.008, replies pacs.002, configurable scenarios (planned)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fednow-core = { path = "../core" }
