[package]
name = "fednow-sim"
description = "Local FedNow Service simulator: accepts pacs.008, answers pacs.002 advices under configurable scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fednow-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { workspace = true }
toml = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
